fix: URLEncoder.encode Charset overload not on Android 9, use String version